# pan-ExM-vis

./: .gitignore  173.main.js  229.main.js  256.main.js  315.main.js  520.main.js  86.main.js  963.main.js  CITATION.cff  README.md  asset-manifest.json  index.css  index.html  index.js  main.js  main.js.LICENSE.txt  manifest.json  package-lock.json  package.json  service-worker.js  service-worker.js.map  sw.js  util.js  webgl-shader-sources.js  webgl-shader.js  webgl.css  webgl.js  webgpu-mc-shaders.js  webgpu-mc.js  webgpu.js  webpack.common.js
.github/workflows/: build-and-deploy-release.yml  build-and-deploy.yml
1.0.0/: manifest.json  service-worker.js  service-worker.js.map
config/: webpack.config.js
modules/mc-webgpu/: mc-webgpu.js
public/: index.html
src/: App.css  App.js  index.css  index.js  package-lock.json  tiff.js  util.js  webgl.js
src/components/: Canvas.js  Import.js  ImportProgress.js  LabeledProgressBar.js  Main.js  MapTools.js  Plots.js  Sidebar.js  StoreItem.js  Toolbar.js  Views.js
src/compute/: compute-jfa.js
src/cpp/: CMakeLists.txt  curv.cpp  danielsson copy.cpp  danielsson.cpp  danielsson.html  danielsson_simd.cpp  fastsweep.cpp  histogram.cpp  jumpflood copy.cpp  jumpflood.cpp  jumpflood.html  local_heatmap.cpp  octree.cpp  sdf.cpp  skeletonise.cpp  skeletonise_old.cpp
src/render/: renderer.js
src/renderers/: renderer.js
src/shaders/: blit.frag  compute-jfa.comp  draw.frag  fragment-shader.frag  map-renderer.frag  map-renderer.vert  vertex-shader.vert  volume-renderer.frag  volume-renderer.vert  volume_renderer_frag copy.glsl
(+290 files in other folders)
